@@ -28,3 +28,9 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+test{
+	minHeapSize = "128m" // initial heap size
+	maxHeapSize = "4g" // maximum heap size
+	jvmArgs '-XX:MaxPermSize=2g' // mem argument for the test JVM
+}
